--- a/Dockerfile.in
+++ b/Dockerfile.in
@@ -1,6 +1,6 @@
 FROM archlinux:latest
 
-RUN pacman -Syu --noconfirm make
+RUN pacman -Syu --noconfirm remake
 
 COPY pacman.conf /etc
 COPY repo /var/cache/prolog
@@ -9,12 +9,14 @@ RUN repo-add prolog.db.tar.xz *.pkg.*
 
 RUN pacman -Sy --noconfirm $PACKAGES
 
-RUN useradd -ms /bin/sh user
-RUN install --owner=user --mode=750 -d /home/user/prolog/repo
+ARG USER
+ARG GROUP
+
+RUN groupadd -g $GROUP user
+RUN useradd -ms /bin/sh -u $USER -g user user
 
 USER user
 WORKDIR /home/user/prolog
-COPY --chown=user Makefile test.pl .
 
-ENTRYPOINT ["make"]
-CMD ["-k", "-j4", "-O", "all"]
+ENTRYPOINT ["remake"]
+CMD ["-k", "-j4", "-O", "--profile", "all"]
