Use remake for entry point too

--- a/Dockerfile.in
+++ b/Dockerfile.in
@@ -15,8 +15,10 @@ ARG GROUP
 RUN groupadd -g $GROUP user
 RUN useradd -ms /bin/sh -u $USER -g user user
 
+COPY --chmod=0755  Makefile /usr/share/prologs/rules.mk
+
 USER user
 WORKDIR /home/user/prolog
 
 ENTRYPOINT ["remake"]
-CMD ["-k", "-j4", "-O", "--profile", "all"]
+CMD ["-f/usr/share/prologs/rules.mk", "-k", "-j4", "-O", "--profile", "all"]
