Migrate to aur/prologs

--- a/Dockerfile.in
+++ b/Dockerfile.in
@@ -1,13 +1,14 @@
 FROM archlinux:latest
 
-RUN pacman -Syu --noconfirm remake
+RUN pacman -Syu --noconfirm expac
 
 COPY pacman.conf /etc
 COPY repo /var/cache/prolog
 WORKDIR /var/cache/prolog
 RUN repo-add prolog.db.tar.xz *.pkg.*
 
-RUN pacman -Sy --noconfirm $PACKAGES
+RUN pacman -Sy --noconfirm prologs
+RUN pacman -S --noconfirm --needed --asdeps $(expac -1S "%n\n%o" prologs)
 
 ARG USER
 ARG GROUP
