Remove explicit dep install + add bioarchlinux repo

--- a/pacman.conf
+++ b/pacman.conf
@@ -86,6 +86,10 @@ Include = /etc/pacman.d/mirrorlist
 SigLevel = Optional TrustAll
 Server = file:///var/cache/prolog
 
+[bioarchlinux]
+Server = https://repo.bioarchlinux.org/$arch
+
+
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
 #[custom]
